service.yml

# apiVersion: v1
# kind: Service
# metadata:
#   name: travel-api-service
#   namespace: travel
# spec:
#   selector:
#     app: travel-new
#   ports:
#     - protocol: TCP
#       port: 8443
#       targetPort: 8443
#   type: ClusterIP   # nodeport - 30000-32767


apiVersion: v1
kind: Service
metadata:
  name: travel-api-service
spec:
  type: NodePort
  selector:
    app: travel-api
  ports:
    - port: 8442
      targetPort: 8442
      nodePort: 30080
